tests/regression/errors/basic/syntax_error_16.csd
// Syntax error test 16 - missing semicolon
sus x drip = 16
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
